# disk-cleaner

./: .gitignore  .releaserc.json  ANALYSIS_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  DISTRIBUTION_STRATEGY.md  LICENSE  README.md  SECURITY.md  TESTING.md  cliff.toml  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/: README.md
.github/actions/auto-version/: action.yml
.github/actions/build-artifacts/: action.yml
.github/actions/github-release/: action.yml
.github/actions/setup-git/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: changelog.yml  ci-legacy.yml  ci.yml  release.yml
docs/: PIPELINE_ARCHITECTURE.md
packaging/aur/: PKGBUILD
scripts/: generate-changelog.sh  universal-install.sh
src/: analyzer.rs  file_manager.rs  main.rs  platform.rs
tests/: integration_tests.rs
