[package]
name = "disk-cleaner-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
crossterm = "0.27"
tui = "0.19"
serde = { version = "1.0", features = ["derive"] }
humansize = "2.1"
walkdir = "2.4"
dialoguer = "0.11"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"